--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "gatsby": "^2.13.13",
     "gatsby-image": "^2.2.4",
     "gatsby-plugin-catch-links": "^2.1.0",
-    "gatsby-plugin-feed": "^2.3.2",
+    "gatsby-plugin-feed": "^2.3.28",
     "gatsby-plugin-google-analytics": "^2.1.1",
     "gatsby-plugin-manifest": "^2.2.1",
     "gatsby-plugin-netlify": "^2.0.13",
@@ -18,7 +18,7 @@
     "gatsby-plugin-react-helmet": "3.1.0",
     "gatsby-plugin-sass": "^2.0.10",
     "gatsby-plugin-sharp": "2.2.12",
-    "gatsby-plugin-sitemap": "2.2.1",
+    "gatsby-plugin-sitemap": "^2.2.1",
     "gatsby-remark-autolink-headers": "^2.1.0",
     "gatsby-remark-copy-linked-files": "^2.1.0",
     "gatsby-remark-images": "3.1.3",
