--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tkssharma.com",
-  "description": "Personal website running on Gatsby, React, and Node.js.",
+  "description": "@tkssharma Personal website running on Gatsby, React, and Node.js.",
   "version": "1.0.1",
   "author": "Tarun Sharma <hello@tkssharma.com>",
   "repository": "git@github.com:tkssharma/tkssharma.com",
