--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eslint-utils": "^1.4.1",
     "gatsby": "^2.13.13",
     "gatsby-image": "^2.2.4",
+    "gatsby-plugin-advanced-sitemap": "^2.0.0",
     "gatsby-plugin-catch-links": "^2.1.0",
     "gatsby-plugin-feed": "^2.3.28",
     "gatsby-plugin-google-analytics": "^2.1.1",
