--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Tarun Sharma <hello@tkssharma.com>",
   "repository": "git@github.com:tkssharma/tkssharma.com",
   "dependencies": {
+    "axios": "^0.19.2",
     "eslint-utils": "^1.4.1",
     "gatsby": "^2.13.13",
     "gatsby-image": "^2.2.4",
@@ -36,6 +37,7 @@
     "react-dom": "^16.8.3",
     "react-github-btn": "^1.1.1",
     "react-helmet": "^5.2.0",
+    "react-slick": "^0.28.1",
     "sharp": "^0.22.1",
     "url-join": "^4.0.0"
   },
